pagina de editar evento y mapas

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="com.interfacesdeusuario.grupo6.schange">
     <uses-permission android:name = 
             "android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="schange"
         android:name="${applicationName}"
